[component-image] Fixed stretch not working in Firefox. Closes #246

--- a/src/block/pricing-box/editor.scss
+++ b/src/block/pricing-box/editor.scss
@@ -4,36 +4,9 @@
  * Enqueued in the editor only.
  */
 
-// [data-type="ugb/pricing-box"] {
-// 	// Fade out placeholder text.
-// 	[data-is-placeholder-visible="true"] + .editor-rich-text__editable {
-// 		opacity: 0.5;
-// 	}
-
-// 	// Only show placeholder text while selected or typing.
-// 	&:not(.is-selected):not(.is-typing) {
-// 		[data-is-placeholder-visible="true"] + .editor-rich-text__editable {
-// 			display: none;
-// 		}
-// 		[data-is-placeholder-visible="true"] {
-// 			display: none;
-// 		}
-// 	}
-// }
-
-// .ugb-pricing-box__price-line {
-// 	> *:nth-of-type(1) {
-// 		align-self: flex-start;
-// 	}
-// 	> *:nth-of-type(3) {
-// 		align-self: flex-end;
-// 	}
-// }
-
-// .ugb-pricing-box {
-// 	> div {
-// 		margin-bottom: 0 !important;
-// 		display: flex;
-// 		flex-direction: column;
-// 	}
-// }
+.ugb-pricing-box__price-line > *:first-child {
+	align-self: flex-start;
+}
+.ugb-pricing-box__price-line > *:last-child {
+	align-self: flex-end;
+}
