--- a/src/components/image/style.scss
+++ b/src/components/image/style.scss
@@ -6,6 +6,10 @@
 		mask-position: center;
 		border-radius: none;
 	}
+	// Firefox doesn't stretch SVG masks via attributes, stretching is done here. Fixes #246.
+	&.ugb-image--shape-stretch {
+		mask-size: 100% 100%;
+	}
 }
 
 // Fallback for IE11: SVG icons will not display as bullets, fallback to normal bullets.
